--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/leaflet": "^1.9.21",
     "ai": "^4.2.0",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
@@ -28,6 +29,7 @@
     "dotenv": "^16.4.7",
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^11.3.19",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.446.0",
     "motion": "^12.6.0",
     "nanoid": "^5.1.5",
@@ -35,8 +37,11 @@
     "next-themes": "^0.3.0",
     "postcss": "^8",
     "react": "^19.0.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-markdown": "^9.0.1",
+    "recharts": "^3.3.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
